--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -452,23 +452,11 @@ My conclusion is that the value of slope $=1$ is two balance points which relate
  
  The first step in the application of a Logit model is the specification (and estimation) of the utility functions for the utility functions for the utility functions for the utility functions for the utility functions for the alternative modes. Let’s assume that the following utility specifications are available:
 
-V(auto) = –0.05–0.08(auto TT)–0.105(parking cost)+0.00001*(HH income)
+$V_{auto}=-0.05-0.08TT_{auto}-0.105Cost_{parking}+0.00001Income_{HH}$
 
-V(bus)= –0.08(bus TT)–0.10(bus WT)– 0.65*(bus fare)
+$V_{bus}=-0.08TT_{bus}-0.10WT_{bus}-0.65Fare_{bus}$
 
-where
-
-  * V(auto) and V(bus) are the systematic utilities of auto and bus respectively;
-  
-  * (auto TT) is the travel time for mode (in minutes);
-  
-  * (HH income) is the household annual income (in dollars);
-  
-  * (parking cost) and (bus fare) are in dollars;
-  
-  * (bus TT) is the travel time for the bus (in minutes);
-  
-  * (bus WT) is the waiting time for bus (in minutes). For simplicity let’s assume average waiting time to be half the headway. 
+where $V_{auto}$ and $V_{bus}$ are the systematic utilities of auto and bus respectively; $TT_{auto}$ is the travel time for mode (in minutes); $Income_{HH}$ is the household annual income (in dollars); $Cost_{parking}$ and $Fare_{bus}$ are in dollars; $TT_{bus}$ is the travel time for the bus (in minutes); $WT_{bus}$is the waiting time for bus (in minutes). For simplicity let’s assume average waiting time to be half the headway. 
 
 Table 1 shows the characteristics of work trips for two population segments. (Think of segment A as people living near the center of a city and segment B as people living in the the the suburbs. People in bothboth segments all work in the downtown area.) 
 
@@ -485,20 +473,86 @@ Table 1: Characteristics of work trips for two population segments
 
  a. Based on the information in Table 1, compute the probabilities that an individual belonging to each segment will choose auto for a work trip.
  
+$V_{auto}=\begin{cases}-0.05-0.08\times25-0.105\times3.00+0.00001\times40000=-1.965 & \text{Segment A} \\-0.05-0.08\times40-0.105\times8.00+0.00001\times80000=-3.29 & \text{Segment B} \end{cases}$
+ 
+$V_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times0.85=-4.5025 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times2.00=-7.1 & \text{Segment B} \end{cases}$
+ 
+ $$P_{auto}=\frac{e^{V_{auto}}}{e^{V_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-1.965}}{e^{-1.965}+e^{-4.5025}}=0.9267293=92.67293\% & \text{Segment A} \\\frac{e^{-3.29}}{e^{-3.29}+e^{-7.1}}=0.9783317=97.83317\%& \text{Segment B} \end{cases}$$
+```{r eval=FALSE, include=FALSE}
+-0.05-0.08*25-0.105*3.00+0.00001*40000
+-0.05-0.08*40-0.105*8.00+0.00001*80000
+-0.08*40-0.10*15/2-0.65*0.85
+-0.08*60-0.10*20/2-0.65*2.00
+exp(-1.965)/(exp(-1.965)+exp(-4.5025))
+exp(-3.29)/(exp(-3.29)+exp(-7.1))
+```
  
  b. In order to increase transit ridership, the local transport authority is considering the following options:
 
   i. Reducing the fare by 50 cents in both segments.
-   
+
+$$V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times(0.85-0.50)=-4.1775 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times(2.00-0.50)=-6.775 & \text{Segment B} \end{cases}$$
+
+$$P'_{bus}=\frac{e^{V'_{bus}}}{e^{V_{auto}}+e^{V'_{bus}}}=\begin{cases} \frac{e^{-4.1775}}{e^{-1.965}+e^{-4.1775}}=0.09863359=9.863359\% & \text{Segment A} \\\frac{e^{-6.775}}{e^{-3.29}+e^{-6.775}}=0.02974205=2.974205\%& \text{Segment B} \end{cases}$$
+
+$$\Delta P_{bus}=P'_{bus}-(1-P_{auto})=\begin{cases} 9.863359\%-(1-92.67293\%)=2.536289\% & \text{Segment A} \\2.974205\%-(1-97.83317\%)=0.807375\% & \text{Segment B} \end{cases}$$
+
+```{r eval=FALSE, include=FALSE}
+-0.08*40-0.10*15/2-0.65*(0.85-0.50)
+-0.08*60-0.10*20/2-0.65*(2.00-0.50)
+exp(-4.1775)/(exp(-1.965)+exp(-4.1775))
+exp(-6.775)/(exp(-3.29)+exp(-6.775))
+9.863359-(100-92.67293)
+2.974205-(100-97.83317)
+```
+
   ii. Doubling the number of buses on each route (which would halve the headways).
-   
+
+$$V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}4-0.65\times0.85=-4.1275 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}4-0.65\times2.00=-6.6 & \text{Segment B} \end{cases}$$
+
+$$P'_{bus}=\frac{e^{V'_{bus}}}{e^{V_{auto}}+e^{V'_{bus}}}=\begin{cases} \frac{e^{-4.1275}}{e^{-1.965}+e^{-4.1275}}=0.1031689=10.31689\% & \text{Segment A} \\\frac{e^{-6.6}}{e^{-3.29}+e^{-6.6}}=0.03522972=3.522972\%& \text{Segment B} \end{cases}$$
+
+$$\Delta P_{bus}=P'_{bus}-(1-P_{auto})=\begin{cases} 9.863359\%-(1-92.67293\%)=2.98982\% & \text{Segment A} \\2.974205\%-(1-97.83317\%)=1.356142\% & \text{Segment B} \end{cases}$$
+
+```{r eval=FALSE, include=FALSE}
+-0.08*40-0.10*15/4-0.65*0.85
+-0.08*60-0.10*20/4-0.65*2.00
+exp(-4.1275)/(exp(-1.965)+exp(-4.1275))
+exp(-6.6)/(exp(-3.29)+exp(-6.6))
+10.31689-(100-92.67293)
+3.522972-(100-97.83317)
+```
+
   iii. Increasing parking costs by 50% (i.e. \$3.00 parking cost increases to \$4.50)
 For each population segment, how will each of these strategies affect transit ridership (market share of transit), and which option will be most effective in increasing ridership?
 
+$$V'_{auto}=\begin{cases}-0.05-0.08\times25-0.105\times3.00\times1.5+0.00001\times40000=-2.1225 & \text{Segment A} \\-0.05-0.08\times40-0.105\times8.00\times1.5+0.00001\times80000=-3.71 & \text{Segment B} \end{cases}$$
+
+$$P'_{auto}=\frac{e^{V'_{auto}}}{e^{V'_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-2.1225}}{e^{-2.1225}+e^{-4.5025}}=0.9152894=91.52894\% & \text{Segment A} \\\frac{e^{-3.71}}{e^{-3.71}+e^{-7.1}}=0.9673905=96.73905\%& \text{Segment B} \end{cases}$$
+
+$$\Delta P_{bus}=-\Delta P_{auto}=P_{auto}-P'_{auto}=\begin{cases} 92.67293\%-91.52894\%=1.14399\% & \text{Segment A} \\97.83317\%-96.73905\%=1.09412\% & \text{Segment B} \end{cases}$$
+
+```{r eval=FALSE, include=FALSE}
+-0.05-0.08*25-0.105*3.00*1.5+0.00001*40000
+-0.05-0.08*40-0.105*8.00*1.5+0.00001*80000
+exp(-2.1225)/(exp(-2.1225)+exp(-4.5025))
+exp(-3.71)/(exp(-3.71)+exp(-7.1))
+92.67293-91.52894
+97.83317-96.73905
+```
+
+The results show that doubling the number of buses on each route is most effective in increasing ridership for both segments.
+
  c. Describe, using a few sentences, another policy that can be analyzed using this demand model.
+
+According to the model, other possible policies include changing the travel time or changing the purchasing power of transit. Setting bus lanes can decrease the bus travel time. Providing discount bus tickets can decrease the real bus fare while income stay same. Both of the policies can increase the transit share.
  
  d. What monetary value of bus travel time, measured in dollars per hour, is implied by the coefficients of this model?
- 
+
+$$VOT =\frac{\Delta V}{\Delta t}\frac{\Delta c}{\Delta V}=\frac{-0.08}{-0.65}=0.1230769$$
+
+In this model, bus fare instead of $\frac{cost}{wage}$ measures the systematic utilities per dollar. The monetary value of bus travel time is \$0.1230769 per minute.
+
 2. Transportation and Land Use
 
 To examine the relationship between transportation cost and land use, consider the following example. A region produces coffee, tea, and wheat for world markets. All output is sold at the port for the current price. Assume that the only input is land and that each farmer gets to keep the price minus the transportation cost and must also pay rent on the land.
@@ -510,11 +564,65 @@ Transport cost per unit per mile |8  |5   |1|
 Price at the port| 100|100|100|
 
  a. In a competitive market, what is the land rent at each distance from the port? At what distance is each crop grown? (Specify the bid rent equation for each crop and the distances over which each will be highest. The latter part can be seen most easily by graphing the equations, but the distances should be calculated directly from the equations.)
- 
+
+Let $S$ is the land area for each crop.
+
+$$R_{coffee}S=\frac{S}{0.2}P-\frac{S}{0.2}\cdot8D\implies $$
+
+$$\begin{cases}R_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2}=500-40D& D\in[0,12.5]\\
+R_{tea}=\frac{100}{0.25}-\frac{5D}{0.25}=400-20D& D\in[0,20]\\
+R_{wheat}=\frac{100}{0.5}-\frac{1D}{0.5}=200-2D& D\in[0,100]
+\end{cases}$$
+
+From the bid-rent theory, only one type of land use with highest rent dominates the land for any distance.
+
+suppose $R_{coffee}\ge R_{tea}$, then $500-40D\ge 400-20D\implies D\le5$,
+
+suppose $R_{tea}\ge R_{wheat}$, then $400-20D\ge 200-2D\implies D\le11.11111$
+
+Therefore, coffee lands dominate the distance with port from 0 to 5 miles; tea lands dominate the distance with port from  5 to 11.11 miles; wheat lands dominate the distance with port from 11.11 to 100 miles.
+
+```{r echo=FALSE}
+plot(c(0,25), c(0,500),xlab ="D", ylab ="R",xaxs = "i",yaxs = "i")
+curve(500-40*x, 0, 5,add = TRUE);text(2.5,250, "coffee
+0-5");points(5,300, pch =1)
+curve(400-20*x, 5,100/9,add = TRUE);text(8,200, "tea
+5-11.11");points(100/9,1600/9, pch =2)
+curve(200-2*x, 100/9,125,add = TRUE);text(15,120, "wheat
+11.11-125")
+abline(v=5, lty=3);abline(v=100/9, lty=3)
+```
+
  b. Land Owner owns 100 acres of land 15 miles from the port. What is the annual rental income? If the interest rate is 5% per year and all prices and costs are expected to remain the same forever, what is the market value of the land?
- 
+
+For wheat is grown in the land 15 miles from the port, then
+
+$R_{wheat}S=(200-2\times15)\times100=\$17000$
+
+$MV=\frac{R_{wheat}S}i=\frac{\$17000}{0.05}=\$340000$
+
  c. Return to the assumptions of (a) but assume that the government decides to subsidize 50% of all transport costs. What happens to land rents and the distance each crop is grown? What would you conclude regarding the impact of transportation costs on city size? What is Land Owners' land worth now if the interest rate is 5%? Are the farmers any better off because of the subsidy? Who does benefit from the subsidy?
- 
+
+$$\begin{cases}R'_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2\times2}=500-20D& D\in[0,25]\\
+R'_{tea}=\frac{100}{0.25}-\frac{5D}{0.25\times2}=400-10D& D\in[0,40]\\
+R'_{wheat}=\frac{100}{0.5}-\frac{1D}{0.5\times2}=200-D& D\in[0,200]
+\end{cases}$$
+
+For the same distance, it is easy to know the rents will higher than before. By the same way, the coffee lands dominate the distance with port from 0 to 10 miles; tea lands dominate the distance with port from  10 to 22.22 miles; wheat lands dominate the distance with port from 22.22 to 200 miles. We get to know that lower transportation cost results in larger city size.
+
+After subsidy, tea is grown in the land 15 miles from the port, then $MV'=\frac{(400-10\times15)\times100}{0.05}=\$500000$.
+
+Now we know that the subsidy will transfer to the land value. The famers have to pay more rent. Only the land owers can benefit from the subsidy.
+
  d. What happens in (c) if all prices for output fall by 50% as well?
- 
+
+$$\begin{cases}R''_{coffee}=\frac{100}{0.2\times2}-\frac{8D}{0.2\times2}=250-20D& D\in[0,12.5]\\
+R''_{tea}=\frac{100}{0.25\times2}-\frac{5D}{0.25\times2}=200-10D& D\in[0,20]\\
+R''_{wheat}=\frac{100}{0.5\times2}-\frac{1D}{0.5\times2}=100-D& D\in[0,100]
+\end{cases}$$
+
+We know that $R''=\frac12R$. The proportional change of rent for different land uses results same land use as begining. $MV''=\frac12MV=\$170000$.
+
  e. Describe the potential impacts on land use if investments were made to the transportation infrastructure (increasing highway lanes) such that transportation costs are lowered.
+ 
+Basicly, the impacts on land use by transprotation infrastructure is simular with subsidy on transport costs. The difference is these impacts are not even. The lands are closer to highway exits will change the land use to high output industies with higher rent and land value.
