--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -930,16 +930,25 @@ TukeyHSD(model_ingredients,conf.level = 0.95)
 
 The data below are from a replicated Latin Square with 4 treatments: row blocks were reused, but column blocks were not.
 
-```{r echo=FALSE, warning=FALSE, out.width='45%'}
+```{r echo=FALSE, warning=FALSE, out.width='30%'}
 table_LSD2 <- read_xlsx("Problem3.xlsx")
 table_LSD2$Replicate <- as.factor(table_LSD2$Replicate)
 table_LSD2$Row <- as.factor(table_LSD2$Row)
 table_LSD2$Col <- as.factor(table_LSD2$Col)
 table_LSD2$Trt <- as.factor(table_LSD2$Trt)
 glimpse(table_LSD2)
+ggplot(table_LSD2,aes(Col,y))+geom_point(aes(shape=Row,col=Replicate))+scale_colour_grey()+facet_grid(.~Trt)+theme_light()
+```
+
+```{r eval=FALSE, include=FALSE}
 ggplot(table_LSD2,aes(Trt,y))+geom_point(data = transform(table_LSD2, Replicate= NULL),aes(shape=Row), alpha=0.2)+geom_point(aes(shape=Row)) +geom_text_repel(aes(label=Col),alpha=.6)+facet_wrap(~Replicate)+theme_light()
 ggplot(table_LSD2,aes(Col,y))+geom_point(data = transform(table_LSD2, Replicate= NULL),aes(shape=Row), alpha=0.2)+geom_point(aes(shape=Row)) +geom_text_repel(aes(label=Trt),alpha=.6)+facet_wrap(~Replicate)+theme_light()
+
+ggplot(table_LSD2,aes(Col,y))+geom_point(data = transform(table_LSD2, Replicate= NULL),aes(shape=Row), )+geom_point(data=filter(table_LSD2,Replicate==2), aes(shape=Row)) +facet_grid(.~Trt)+theme_light()
+
+ggplot(table_LSD2,aes(Col,y))+geom_point(data = transform(filter(table_LSD2,Replicate==2), Replicate=NULL),aes(shape=Row), alpha=0.5,col="red")+geom_point(data = transform(table_LSD2, Replicate=NULL),aes(shape=Row),col="blue", alpha=1)+facet_grid(.~Trt)+theme_light()
 ```
+
 
  ---
 
@@ -969,7 +978,7 @@ $$\sum_{i=1}^aQ_i=\sum_{i=1}^a[y_{i.}-\sum_{j=1}^bn_{ij}\bar y_{.j}]=\sum_{i=1}^
 
 For each treatment has $r$ replications in BIBD, $\sum_{j=1}^b\sum_{i=1}^an_{ij}=ra=kb$
 
-$$\sum_{i=1}^aQ_i=b\bar y_{..}-\frac{y_{..}}kkb=0$$
+$$\sum_{i=1}^aQ_i=b\bar y_{..}-\frac{\bar y_{..}}kkb=0$$
  
 ### Problem 5:
 
@@ -978,32 +987,29 @@ $y_{ijk}=μ+τ_i+β_j+(τβ)_{ij}+ε_{ijk}$, for $i=1,2,…,a$; $j=1,2,…,b$; $
 $ε_{ijk}\sim iid N(0,σ^2)$;$\sum_{i=1}^aτ_i=0$ and $\sum_{j=1}^bβ_j=0$; $\sum_{i=1}^a(τβ)_{ij}=0$   and $\sum_{j=1}^b(τβ)_{ij}=0$
 $\bar y_{i..}=\frac1{bn}\sum_{j=1}^b\sum_{k=1}^ny_{ijk}$; $y_{...}=\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^ny_{ijk}$; $\bar y_{...}=\frac{y_{...}}N$. Compute the $E(SS_A)$ where  $SS_A=bn\sum_{i=1}^a(\bar y_{i..}-\bar y_{...})^2$ 
 
+For $i=1,2,…,a$; $j=1,2,…,b$; $k=1,2,…,n$
+
 $$\bar y_{i..}-\bar y_{...}=\frac1{bn}\sum_{j=1}^b\sum_{k=1}^n(μ+τ_i+β_j+(τβ)_{ij}+ε_{ijk})-\frac1{abn}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^n(μ+τ_i+β_j+(τβ)_{ij}+ε_{ijk})$$ 
 
 $$=μ+τ_i+\frac1{b}\sum_{j=1}^bβ_j+\frac1{b}\sum_{j=1}^b(τβ)_{ij}+\frac1{bn}\sum_{j=1}^b\sum_{k=1}^nε_{ijk}-μ-\frac1{a}\sum_{i=1}^aτ_i-\frac1{b}\sum_{j=1}^bβ_j-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(τβ)_{ij}-\frac1{abn}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nε_{ijk}$$ 
 
 For $\sum_{i=1}^aτ_i=0$, $\sum_{j=1}^bβ_j=0$; $\sum_{i=1}^a(τβ)_{ij}=0$, and $\sum_{j=1}^b(τβ)_{ij}=0$
 
-$$=τ_i+\frac1{bn}\sum_{j=1}^b\sum_{k=1}^nε_{ijk}-\frac1{abn}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nε_{ijk}=τ_i+\bar ε_{i..}-\bar ε_{...}$$ 
+$$τ_i+\frac1{bn}\sum_{j=1}^b\sum_{k=1}^nε_{ijk}-\frac1{abn}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nε_{ijk}=τ_i+\bar ε_{i..}-\bar ε_{ijk}$$ 
 
-$$=τ_i+\frac1{bn}\sum_{j=1}^b\sum_{k=1}^nε_{ijk}-\frac1{abn}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nε_{ijk}=τ_i+\frac1{abn}\sum_{j=1}^b\sum_{k=1}^n(aε_{ijk}-\sum_{i=1}^aε_{ijk})$$ 
+For $τ_i$ is a constant of the $i^th$ treatment, $E{τ_i}=τ_i,V{τ_i}=0$
 
- ---
+$$E[\bar y_{i..}-\bar y_{...}]=E[τ_i+\bar ε_{i..}-\bar ε_{ijk}]=τ_i+\frac1{bn}\sum_{j=1}^b\sum_{k=1}^nE[ε_{ijk}]-\frac1{abn}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nE[ε_{ijk}]=\tau_i$$ 
 
-$$SS_A=bn\sum_{i=1}^a(\bar y_{i..}-\bar y_{...})^2=bn\sum_{i=1}^a(τ_i+\bar ε_{i..}-\bar ε_{...})^2=bn\sum_{i=1}^a(τ_i^2+\bar ε_{i..}^2+\bar ε_{...}^2+2τ_i\bar ε_{i..}-2τ_i\bar ε_{...}-2\bar ε_{i..}\bar ε_{...})$$ 
-
-$$=bn\sum_{i=1}^a(τ_i^2+\bar ε_{i..}^2+\bar ε_{...}^2)+2bn\sum_{i=1}^aτ_i\bar ε_{i..}-2bn\sum_{i=1}^aτ_i\bar ε_{...}-2\sum_{i=1}^a\bar ε_{i..}\bar ε_{...}$$ 
-
- ---
-
-$$E[SS_A]=bn\sum_{i=1}^a\left(E[τ_i^2]+E[\bar ε_{i..}^2]+E[\bar ε_{...}^2]+2Cov[τ_i,\bar ε_{i..}]-2Cov[τ_i,\bar ε_{...}]-2Cov[\bar ε_{i..},\bar ε_{...}]\right)$$ 
+$$V[\bar y_{i..}-\bar y_{...}]=V[τ_i+\bar ε_{i..}-\bar ε_{ijk}]=V[\tau_i]+V[\frac{\sum\limits_{j=1}^b\sum\limits_{k=1}^nε_{ijk}}{bn}]+V[\frac{\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^nε_{ijk}}{abn}]+2Cov[τ_i,\bar ε_{i..}]-2Cov[τ_i,\bar ε_{...}]-2Cov[\bar ε_{i..},\bar ε_{...}]$$ 
 
 For $τ_i$ and $ε_{ijk}$ are independent. $Cov\left[τ_i,\bar ε_{i..}\right]=Cov[τ_i,\bar ε_{...}]=0$
 
+$$=0+\frac{σ^2}{bn}+\frac{σ^2}{abn}+0-0-2Cov[\frac{\sum\limits_{j=1}^b\sum\limits_{k=1}^nε_{ijk}}{bn},\frac{\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^nε_{ijk}}{abn}]=\frac{σ^2}{bn}+\frac{σ^2}{abn}-\frac{2}{ab^2n^2}\sum_{j=1}^b\sum_{k=1}^nCov[ε_{ijk},\sum_{i=1}^aε_{ijk}]$$ 
+
 For $ε_{ijk}\sim iidN(0,σ^2)$, $Cov\left[ε_{ijk},\sum_{i=1}^aε_{ijk}\right]=\sigma^2$
 
-$$=bn\sum_{i=1}^aτ_i^2+\frac{bn}{(bn)^2}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nE[ε_{ijk}^2]+\frac{bn}{(abn)^2}\sum_{i=1}^a\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nE[ε_{ijk}^2]+0-0-\frac{2bn}{(bn)(abn)}\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^nCov\left[ε_{ijk},\sum_{i=1}^aε_{ijk}\right]$$ 
+$$=\frac{σ^2}{bn}+\frac{σ^2}{abn}-\frac{2}{ab^2n^2}\sum_{j=1}^b\sum_{k=1}^nσ^2=\frac{a-1}{abn}σ^2$$ 
 
+$$E[SS_A]=bn\sum_{i=1}^aE[(\bar y_{i..}-\bar y_{...})^2]=bn\sum_{i=1}^a(E[\bar y_{i..}-\bar y_{...}]^2+V[\bar y_{i..}-\bar y_{...}])=bn\sum_{i=1}^a(\tau_i^2+\frac{a-1}{abn}σ^2)=bn\sum_{i=1}^aτ_i^2+(a-1)σ^2$$ 
 
-
-$$=bn\sum_{i=1}^aτ_i^2+{a}σ^2+σ^2-2σ^2=bn\sum_{i=1}^aτ_i^2+(a-1)σ^2$$ 
