--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -492,7 +492,7 @@ The probabilities of choosing auto for a work trip for an individual belonging t
  b. In order to increase transit ridership, the local transport authority is considering the following options:
 
 
-  i. Reducing the fare by 50 cents in both segments.
+  ii. Reducing the fare by 50 cents in both segments.
 
 $V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times(0.85-0.50)=-4.1775 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times(2.00-0.50)=-6.775 & \text{Segment B} \end{cases}$
 
@@ -610,8 +610,6 @@ $R_{wheat}S=(200-2\times15)\times100=\$17000$
 
 $MV=\frac{SR_{wheat}}i=\frac{\$17000}{0.05}=\$340000$
 
- ---
- 
  c. Return to the assumptions of (a) but assume that the government decides to subsidize 50% of all transport costs. What happens to land rents and the distance each crop is grown? What would you conclude regarding the impact of transportation costs on city size? What is Land Owners' land worth now if the interest rate is 5%? Are the farmers any better off because of the subsidy? Who does benefit from the subsidy?
 
 $$\begin{cases}R'_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2\times2}=500-20D'& D'\in[0,25]\\
