--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -954,7 +954,7 @@ ols_plot_resid_qq(lm(y~Trt+Day+Batch,data =table_ingredients))
 
 The data below are from a replicated Latin Square with 4 treatments: row blocks were reused, but column blocks were not.
 
-```{r echo=FALSE, warning=FALSE, out.height='40%'}
+```{r echo=FALSE, warning=FALSE, out.width='30%',fig.asp=0.5}
 table_LSD2 <- read_xlsx("Problem3.xlsx")
 table_LSD2$Replicate <- as.factor(table_LSD2$Replicate)
 table_LSD2$Row <- as.factor(table_LSD2$Row)
